--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,5 +1,35 @@
 $main-text: #333333;
+$primary: #7036BA;
 
 body{
     box-sizing: border-box;
+    background-color: $primary;
+}
+
+
+header#header-section{
+    // border: 1px solid red;
+    background: url('/img/gymHeader.jpg');
+    background-position: right;
+    background-size: 50%;
+    background-repeat: no-repeat;
+    // min-width: 100%;
+    h1{
+        font-size: 60px;
+    }
+    p{
+        font-size: 24px;
+    }
+
+    .header-text{
+        max-width: 540px;
+        // border: 1px solid cyan;
+    }
+}
+
+
+
+
+footer{
+
 }
