--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -11,7 +11,9 @@ h1{
 h2{
     font-size: 50px;
 }
-
+h3{
+    font-size: 20px;
+}
 
 header#header-section{
     // border: 1px solid red;
@@ -66,6 +68,22 @@ section#how-to-start-section{
             font-size: 20px;
             font-weight: lighter;
         }
+    }
+}
+
+section#features{
+    .row{
+        gap: 30px;
+        img{
+            width: 70px;
+        }
+        p{
+            font-size: 16px;
+        }
+    }
+    button{
+        font-size: 25px;
+        padding: 5px 40px;
     }
 }
 
