maquetación del footer

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -121,5 +121,12 @@ section#pricing{
 
 
 footer{
+    padding: 50px 0;
 
+    span.terms{
+        font-size: 16px;
+    }
+    span.copy{
+        font-size: 20px;
+    }
 }
